<resources>
    <string name="app_name">Wikipedia RoBot</string>
    <string name="app_url">https://goo.gl/AEmzrq</string>
    <string name="info_title">Info</string>

    <string name="label_curiosita">Curiosity</string>
    <string name="label_citazione">Quote</string>
    <string name="label_proverbio">Proverb</string>
    <string name="label_nonciclopedia">Uncyclopedia</string>
    <string name="label_send">Send</string>

    <string name="info_message">WikiRobot is a bot that sends you interesting daily suggestions. Contacts: techbrain@autistici.org</string>
    <string name="share_message">Please check </string>
    <string name="contact_email">techbrain@autistici.org</string>
    <string name="network_error">Network error. Please check your internet connection</string>
    <string name="default_search_text">Ask and you shall receive</string>
    <string name="label_proverb_quote">Quote/Proverb</string>
    <string name="today_label">TODAY</string>
    <string name="share_label">Share</string>
    <string name="clear_chat_label">Delete Chat</string>
    <string name="contact_us_label">Contact Us</string>
    <string name="info_label">Info</string>
    <string name="shared_by_message">shared by</string>
    <string name="label_confirm_clear">Are you sure to delete chat?</string>
    <string name="label_yes">Yes</string>
    <string name="label_cancel">Cancel</string>
</resources>
