<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dip">

        <TextView
            android:id="@+id/confirmText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dip"
            android:textSize="20dip"
            android:text="@string/label_confirm_clear" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dip">

            <Button
                android:id="@+id/cancelClearBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_cancel"/>

            <Button
                android:id="@+id/confirmClearBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_yes"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>