<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary">

    </android.support.v7.widget.Toolbar>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mainChatAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-1872225169177247/7420019822">
    </com.google.android.gms.ads.AdView>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:id="@+id/listContents"
        android:transcriptMode="alwaysScroll"
        android:stackFromBottom="true">

    </ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="50dp"
                android:text="@string/label_curiosita"
                android:id="@+id/curiosita_button"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="50dp"
                android:text="@string/label_citazione"
                android:id="@+id/citazione_button"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="50dp"
                android:text="@string/label_proverbio"
                android:id="@+id/proverb_button"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="50dp"
                android:text="@string/label_nonciclopedia"
                android:id="@+id/nonciclopedia_button"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="90dp"
            android:id="@+id/editBox"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="60dp"
            android:id="@+id/sendButton"
            android:text="@string/label_send"/>
    </LinearLayout>
</LinearLayout>